--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Studio</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
@@ -58,7 +59,7 @@
 </ul>
 </section>
 
-<!-- Works section -->
+<!-- Examples section -->
 <section>
 <h2>What are we doing</h2>
 <ul>
