--- a/portfolio.html
+++ b/portfolio.html
@@ -1,59 +1,124 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Web Studio</title>
-    <link rel="stylesheet" href="./css/style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="./css/style.css" />
+  </head>
+
+  <body>
     <!-- Header -->
     <header>
-        <!-- Navigation-->
-        <nav>
-            <a href="./index.html">Web Studio</a>
-            <ul>
-                <li><a href="./index.html">Studio</a></li>
-                <li><a href="#">Portfolio</a></li>
-                <li><a href="#">Contacts</a></li>
-            </ul>
-        </nav>
-
-       <address>
+      <!-- Navigation-->
+      <nav>
+        <a href="./index.html">Web Studio</a>
         <ul>
-           <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+          <li><a href="./index.html">Studio</a></li>
+          <li><a href="#">Portfolio</a></li>
+          <li><a href="#">Contacts</a></li>
         </ul>
-    </address>
+      </nav>
+
+      <address>
+        <ul>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        </ul>
+      </address>
     </header>
+
+    <main>
+      <!-- Filter -->
+        <ul class="filter">
+          <!-- фон и цвет текста в состояние фокуса и хофера -->
+          <li><button type="button">All</button></li>
+          <!-- фон и цвет текста в дефолтном состояние -->
+          <li><button type="button">Web Site</button></li>
+          <li><button type="button">App</button></li>
+          <li><button type="button">Design</button></li>
+          <li><button type="button">Marketing</button></li>
     
-   
-<main>
 
-<!-- Section Filter -->
-<section>
-<h2 hidden>Filter</h2>
-<ul>
-    <li><button type="button">All</button></li>
-    <li><button type="button">Web Site</button></li>
-    <li><button type="button">App</button></li>
-    <li><button type="button">Design</button></li>
-    <li><button type="button">Marketing</button></li>
-</ul>
-</section>
-
-<!-- Works section -->
-<section>
-    <h1 hidden>Works</h1>
-
-</section>
-</main>
+      <!-- Works section -->
+      <section>
+        <h1 hidden>Works</h1>
+        <ul>
+            <li>
+                <a href="">
+                    <img src="" alt="">
+                    <h2></h2>
+                    <p></p>
+                    <p></p>
+                </a>
+            </li>
+            <li>
+                <a href="">
+                    <img src="" alt="">
+                    <h2></h2>
+                    <p></p>
+                    <p></p>
+                </a>
+            </li>
+            <li>
+                <a href="">
+                    <img src="" alt="">
+                    <h2></h2>
+                    <p></p>
+                    <p></p>
+                </a>
+            </li>
+            <li>
+                <a href="">
+                    <img src="" alt="">
+                    <h2></h2>
+                    <p></p>
+                    <p></p>
+                </a>
+            </li>
+            <li>
+                <a href="">
+                    <img src="" alt="">
+                    <h2></h2>
+                    <p></p>
+                    <p></p>
+                </a>
+            </li>
+            <li>
+                <a href="">
+                    <img src="" alt="">
+                    <h2></h2>
+                    <p></p>
+                    <p></p>
+                </a>
+            </li>
+            <li>
+                <a href="">
+                    <img src="" alt="">
+                    <h2></h2>
+                    <p></p>
+                    <p></p>
+                </a>
+            </li>
+            <li>
+                <a href="">
+                    <img src="" alt="">
+                    <h2></h2>
+                    <p></p>
+                    <p></p>
+                </a>
+            </li>
+        </ul>
+      </section>
+    </main>
 
     <footer>
-        <a href="./index.html">Web Studio</a>
-        <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+      <a href="./index.html">Web Studio</a>
+      <p>
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </p>
     </footer>
-
-</body>
+  </body>
 </html>
