--- a/index.html
+++ b/index.html
@@ -5,35 +5,54 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Web Studio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/style.css" />
   </head>
 
   <body>
     <!-- Header -->
-    <header>
+    <header class="header">
       <!-- Navigation-->
-      <nav>
-        <a href="./index.html">Web Studio</a>
-        <ul>
-          <li><a href="./index.html">Studio</a></li>
-          <li><a href="./portfolio.html">Portfolio</a></li>
-          <li><a href="#">Contacts</a></li>
+      <nav class="header-nav">
+        <a href="./index.html" class="logo link"
+          ><span class="logo-part">Web</span>Studio</a
+        >
+
+        <ul class="header-list list">
+          <li><a href="./index.html" class="header-link link">Studio</a></li>
+          <li>
+            <a href="./portfolio.html" class="header-link link">Portfolio</a>
+          </li>
+          <li><a href="#" class="header-link link">Contacts</a></li>
         </ul>
       </nav>
 
       <address>
-        <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        <ul class="adress list">
+          <li>
+            <a href="mailto:info@devstudio.com" class="header-mail link"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a href="tel:+110001111111" class="header-tel link"
+              >+11 (000) 111-11-11</a
+            >
+          </li>
         </ul>
       </address>
     </header>
 
     <main>
       <!-- Hero secrion -->
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+      <section class="hero">
+        <h1 class="hero-title">Effective Solutions for Your Business</h1>
+        <button type="button" class="button">Order Service</button>
       </section>
 
       <!-- Advantages section-->
