--- a/portfolio.html
+++ b/portfolio.html
@@ -5,32 +5,52 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Web Studio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/style.css" />
   </head>
 
   <body>
     <!-- Header -->
-    <header>
+    <header class="header">
       <!-- Navigation-->
-      <nav>
-        <a href="./index.html">Web Studio</a>
-        <ul>
-          <li><a href="./index.html">Studio</a></li>
-          <li><a href="#">Portfolio</a></li>
-          <li><a href="#">Contacts</a></li>
+      <nav class="header-nav">
+        <a href="./index.html" class="logo link"
+          ><span class="logo-part">Web</span>Studio</a
+        >
+
+        <ul class="header-list list">
+          <li><a href="./index.html" class="header-link link">Studio</a></li>
+          <li>
+            <a href="./portfolio.html" class="header-link link">Portfolio</a>
+          </li>
+          <li><a href="#" class="header-link link">Contacts</a></li>
         </ul>
       </nav>
 
       <address>
-        <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        <ul class="adress list">
+          <li>
+            <a href="mailto:info@devstudio.com" class="header-mail link"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a href="tel:+110001111111" class="header-tel link"
+              >+11 (000) 111-11-11</a
+            >
+          </li>
         </ul>
       </address>
     </header>
 
     <main>
-      <!-- Filter -->
+      <section>
+        <!-- Filter -->
         <ul class="filter">
           <!-- фон и цвет текста в состояние фокуса и хофера -->
           <li><button type="button">All</button></li>
@@ -39,76 +59,164 @@
           <li><button type="button">App</button></li>
           <li><button type="button">Design</button></li>
           <li><button type="button">Marketing</button></li>
-    
+        </ul>
 
-      <!-- Works section -->
-      <section>
+        <!-- Works section -->
         <h1 hidden>Works</h1>
         <ul>
-            <li>
-                <a href="">
-                    <img src="" alt="">
-                    <h2></h2>
-                    <p></p>
-                    <p></p>
-                </a>
-            </li>
-            <li>
-                <a href="">
-                    <img src="" alt="">
-                    <h2></h2>
-                    <p></p>
-                    <p></p>
-                </a>
-            </li>
-            <li>
-                <a href="">
-                    <img src="" alt="">
-                    <h2></h2>
-                    <p></p>
-                    <p></p>
-                </a>
-            </li>
-            <li>
-                <a href="">
-                    <img src="" alt="">
-                    <h2></h2>
-                    <p></p>
-                    <p></p>
-                </a>
-            </li>
-            <li>
-                <a href="">
-                    <img src="" alt="">
-                    <h2></h2>
-                    <p></p>
-                    <p></p>
-                </a>
-            </li>
-            <li>
-                <a href="">
-                    <img src="" alt="">
-                    <h2></h2>
-                    <p></p>
-                    <p></p>
-                </a>
-            </li>
-            <li>
-                <a href="">
-                    <img src="" alt="">
-                    <h2></h2>
-                    <p></p>
-                    <p></p>
-                </a>
-            </li>
-            <li>
-                <a href="">
-                    <img src="" alt="">
-                    <h2></h2>
-                    <p></p>
-                    <p></p>
-                </a>
-            </li>
+          <li>
+            <a href="">
+              <img
+                src="./images/img-banking.jpg"
+                alt="banking app"
+                width="360"
+                height="300"
+              />
+              <h2>Banking App Interface Concept</h2>
+              <p>App</p>
+              <p>
+                14 Stylish and User-Friendly App Design Concepts · Task Manager
+                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
+                Storage App
+              </p>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img
+                src="./images/img-cashless-payment.jpg"
+                alt="cashless payment"
+                width="360"
+                height="300"
+              />
+              <h2>Cashless Payment</h2>
+              <p>Marketing</p>
+              <p>
+                14 Stylish and User-Friendly App Design Concepts · Task Manager
+                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
+                Storage App
+              </p>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img
+                src="./images/img-meditation.jpg"
+                alt="meditaion app"
+                width="360"
+                height="300"
+              />
+              <h2>Meditaion App</h2>
+              <p>App</p>
+              <p>
+                14 Stylish and User-Friendly App Design Concepts · Task Manager
+                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
+                Storage App
+              </p>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img
+                src="./images/img-taxi.jpg"
+                alt="taxi service"
+                width="360"
+                height="300"
+              />
+              <h2>Taxi Service</h2>
+              <p>Marketing</p>
+              <p>
+                14 Stylish and User-Friendly App Design Concepts · Task Manager
+                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
+                Storage App
+              </p>
+            </a>
+          </li>
+          <li>
+            <a href=".">
+              <img
+                src="/images/img-screen.jpg"
+                alt="screen illustrations"
+                width="360"
+                height="300"
+              />
+              <h2>Screen Illustrations</h2>
+              <p>Design</p>
+              <p>
+                14 Stylish and User-Friendly App Design Concepts · Task Manager
+                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
+                Storage App
+              </p>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img
+                src="./images/img-courses.jpg"
+                alt="online courses"
+                width="360"
+                height="300"
+              />
+              <h2>Online Courses</h2>
+              <p>Marketing</p>
+              <p>
+                14 Stylish and User-Friendly App Design Concepts · Task Manager
+                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
+                Storage App
+              </p>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img
+                src="./images/img-instagram.jpg"
+                alt="instagram stories"
+                width="360"
+                height="300"
+              />
+              <h2>Instagram Stories Concept</h2>
+              <p>Design</p>
+              <p>
+                14 Stylish and User-Friendly App Design Concepts · Task Manager
+                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
+                Storage App
+              </p>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img
+                src="./images/img-food.jpg"
+                alt="food"
+                width="360"
+                height="300"
+              />
+              <h2>Organic Food</h2>
+              <p>Web Site</p>
+              <p>
+                14 Stylish and User-Friendly App Design Concepts · Task Manager
+                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
+                Storage App
+              </p>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img
+                src="./images/img-coffee.jpg"
+                alt="coffee"
+                width="360"
+                height="300"
+              />
+              <h2>Fresh Coffee</h2>
+              <p>Web Site</p>
+              <p>
+                14 Stylish and User-Friendly App Design Concepts · Task Manager
+                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
+                Storage App
+              </p>
+            </a>
+          </li>
         </ul>
       </section>
     </main>
