--- a/index.html
+++ b/index.html
@@ -52,37 +52,37 @@
       <!-- Hero secrion -->
       <section class="hero">
         <h1 class="hero-title">Effective Solutions for Your Business</h1>
-        <button type="button" class="button">Order Service</button>
+        <button type="button" class="button button-hero">Order Service</button>
       </section>
 
       <!-- Advantages section-->
-      <section>
-        <h2 hidden>Advantages</h2>
+      <section class="advantages">
+        <h2 class="visually-hidden">Advantages</h2>
         <ul>
           <li>
-            <h3>Strategy</h3>
-            <p>
+            <h3 class="advantages-title">Strategy</h3>
+            <p class="advantages-description">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3>Punctuality</h3>
-            <p>
+            <h3 class="advantages-title">Punctuality</h3>
+            <p class="advantages-description">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3>Diligence</h3>
-            <p>
+            <h3 class="advantages-title">Diligence</h3>
+            <p class="advantages-description">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3>Technologies</h3>
-            <p>
+            <h3 class="advantages-title">Technologies</h3>
+            <p class="advantages-description">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -91,9 +91,9 @@
       </section>
 
       <!-- Examples section -->
-      <section>
-        <h2>What are we doing</h2>
-        <ul>
+      <section class="examples">
+        <h2 class="examples-title">What are we doing</h2>
+        <ul class="example-list list">
           <li>
             <img
               src="./images/img_computer.jpg"
@@ -122,9 +122,9 @@
       </section>
 
       <!-- Team section -->
-      <section>
-        <h2>Our Team</h2>
-        <ul>
+      <section class="team">
+        <h2 class="team-title">Our Team</h2>
+        <ul class="team-list list">
           <li>
             <img
               src="./images/mark_guerrero.jpg"
@@ -132,7 +132,7 @@
               width="264"
               height="260"
             />
-            <h3>Mark Guerrero</h3>
+            <h3 class="team-name">Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
           <li>
@@ -142,7 +142,7 @@
               width="264"
               height="260"
             />
-            <h3>Tom Ford</h3>
+            <h3 class="team-name">Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
@@ -152,7 +152,7 @@
               width="264"
               height="260"
             />
-            <h3>Camila Garcia</h3>
+            <h3 class="team-name">Camila Garcia</h3>
             <p>Marketing</p>
           </li>
           <li>
@@ -162,17 +162,20 @@
               width="264"
               height="260"
             />
-            <h3>Daniel Wilson</h3>
+            <h3 class="team-name">Daniel Wilson</h3>
             <p>UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
 
-    <footer>
-      <a href="./index.html">Web Studio</a>
-      <p>
-        Increase the flow of customers and sales for your business with digital
+    <footer class="footer">
+      <a href="./index.html" class="logo link"
+        ><span class="logo-part">Web</span>Studio</a
+      >
+      <p class="footer-text">
+        Increase the flow of customers and <br />
+        for your business with digital <br />
         marketing & growth solutions.
       </p>
     </footer>
