--- a/portfolio.html
+++ b/portfolio.html
@@ -49,32 +49,31 @@
     </header>
 
     <main>
-      <section>
-        <!-- Filter -->
-        <ul class="filter">
+      <!-- PORTFOLIO -->
+      <section class="portfolio">
+        <ul class="portfolio-filter list">
           <!-- фон и цвет текста в состояние фокуса и хофера -->
-          <li><button type="button">All</button></li>
+          <li><button type="button" class="button button-portfolio">All</button></li>
           <!-- фон и цвет текста в дефолтном состояние -->
-          <li><button type="button">Web Site</button></li>
-          <li><button type="button">App</button></li>
-          <li><button type="button">Design</button></li>
-          <li><button type="button">Marketing</button></li>
+          <li><button type="button" class="button button-portfolio">Web Site</button></li>
+          <li><button type="button" class="button button-portfolio">App</button></li>
+          <li><button type="button" class="button button-portfolio">Design</button></li>
+          <li><button type="button" class="button button-portfolio">Marketing</button></li>
         </ul>
 
-        <!-- Works section -->
-        <h1 hidden>Works</h1>
-        <ul>
+        <h1 class="visually-hidden">Works</h1>
+        <ul class="works-list list">
           <li>
-            <a href="">
+            <a href="" class="link">
               <img
                 src="./images/img-banking.jpg"
                 alt="banking app"
                 width="360"
                 height="300"
               />
-              <h2>Banking App Interface Concept</h2>
-              <p>App</p>
-              <p>
+              <h2 class="works-items">Banking App Interface Concept</h2>
+              <p class="works-sphere">App</p>
+              <p class="works-text">
                 14 Stylish and User-Friendly App Design Concepts · Task Manager
                 App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
                 Storage App
@@ -82,16 +81,16 @@
             </a>
           </li>
           <li>
-            <a href="">
+            <a href="" class="link">
               <img
                 src="./images/img-cashless-payment.jpg"
                 alt="cashless payment"
                 width="360"
                 height="300"
               />
-              <h2>Cashless Payment</h2>
-              <p>Marketing</p>
-              <p>
+              <h2 class="works-items">Cashless Payment</h2>
+              <p class="works-sphere">Marketing</p> 
+              <p class="works-text">
                 14 Stylish and User-Friendly App Design Concepts · Task Manager
                 App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
                 Storage App
@@ -99,16 +98,16 @@
             </a>
           </li>
           <li>
-            <a href="">
+            <a href="" class="link">
               <img
                 src="./images/img-meditation.jpg"
                 alt="meditaion app"
                 width="360"
                 height="300"
               />
-              <h2>Meditaion App</h2>
-              <p>App</p>
-              <p>
+              <h2 class="works-items">Meditaion App</h2>
+              <p class="works-sphere">App</p>
+              <p class="works-text">
                 14 Stylish and User-Friendly App Design Concepts · Task Manager
                 App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
                 Storage App
@@ -116,16 +115,16 @@
             </a>
           </li>
           <li>
-            <a href="">
+            <a href="" class="link">
               <img
                 src="./images/img-taxi.jpg"
                 alt="taxi service"
                 width="360"
                 height="300"
               />
-              <h2>Taxi Service</h2>
-              <p>Marketing</p>
-              <p>
+              <h2 class="works-items">Taxi Service</h2>
+              <p class="works-sphere">Marketing</p>
+              <p class="works-text">
                 14 Stylish and User-Friendly App Design Concepts · Task Manager
                 App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
                 Storage App
@@ -133,16 +132,16 @@
             </a>
           </li>
           <li>
-            <a href=".">
+            <a href="." class="link">
               <img
                 src="/images/img-screen.jpg"
                 alt="screen illustrations"
                 width="360"
                 height="300"
               />
-              <h2>Screen Illustrations</h2>
-              <p>Design</p>
-              <p>
+              <h2 class="works-items">Screen Illustrations</h2>
+              <p class="works-sphere">Design</p>
+              <p class="works-text">
                 14 Stylish and User-Friendly App Design Concepts · Task Manager
                 App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
                 Storage App
@@ -150,16 +149,16 @@
             </a>
           </li>
           <li>
-            <a href="">
+            <a href="" class="link">
               <img
                 src="./images/img-courses.jpg"
                 alt="online courses"
                 width="360"
                 height="300"
               />
-              <h2>Online Courses</h2>
-              <p>Marketing</p>
-              <p>
+              <h2 class="works-items">Online Courses</h2>
+              <p class="works-sphere">Marketing</p>
+              <p class="works-text">
                 14 Stylish and User-Friendly App Design Concepts · Task Manager
                 App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
                 Storage App
@@ -167,16 +166,16 @@
             </a>
           </li>
           <li>
-            <a href="">
+            <a href="" class="link">
               <img
                 src="./images/img-instagram.jpg"
                 alt="instagram stories"
                 width="360"
                 height="300"
               />
-              <h2>Instagram Stories Concept</h2>
-              <p>Design</p>
-              <p>
+              <h2 class="works-items">Instagram Stories Concept</h2>
+              <p class="works-sphere">Design</p>
+              <p class="works-text">
                 14 Stylish and User-Friendly App Design Concepts · Task Manager
                 App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
                 Storage App
@@ -184,16 +183,16 @@
             </a>
           </li>
           <li>
-            <a href="">
+            <a href="" class="link">
               <img
                 src="./images/img-food.jpg"
                 alt="food"
                 width="360"
                 height="300"
               />
-              <h2>Organic Food</h2>
-              <p>Web Site</p>
-              <p>
+              <h2 class="works-items">Organic Food</h2>
+              <p> class="works-sphere"Web Site</p>
+              <p class="works-text">
                 14 Stylish and User-Friendly App Design Concepts · Task Manager
                 App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
                 Storage App
@@ -201,16 +200,16 @@
             </a>
           </li>
           <li>
-            <a href="">
+            <a href=" class="link"" class="link">
               <img
                 src="./images/img-coffee.jpg"
                 alt="coffee"
                 width="360"
                 height="300"
               />
-              <h2>Fresh Coffee</h2>
-              <p>Web Site</p>
-              <p>
+              <h2 class="works-items">Fresh Coffee</h2>
+              <p class="works-sphere">Web Site</p>
+              <p class="works-text">
                 14 Stylish and User-Friendly App Design Concepts · Task Manager
                 App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
                 Storage App
@@ -221,12 +220,17 @@
       </section>
     </main>
 
-    <footer>
-      <a href="./index.html">Web Studio</a>
-      <p>
-        Increase the flow of customers and sales for your business with digital
+    <footer class="footer">
+      <a href="./index.html" class="logo link"
+        ><span class="logo-part">Web</span>Studio</a
+      >
+      <p class="footer-text">
+        Increase the flow of customers and <br />
+        for your business with digital <br />
         marketing & growth solutions.
       </p>
     </footer>
   </body>
 </html>
+
+
