changes to the 2 homework

--- a/portfolio.html
+++ b/portfolio.html
@@ -61,9 +61,9 @@
           <li><button type="button" class="button button-portfolio">Marketing</button></li>
         </ul>
 
-        <h1 class="visually-hidden">Works</h1>
+        <h1 class="works-rank visually-hidden">Works</h1>
         <ul class="works-list list">
-          <li>
+          <li class="works-items">
             <a href="" class="link">
               <img
                 src="./images/img-banking.jpg"
@@ -80,7 +80,7 @@
               </p>
             </a>
           </li>
-          <li>
+          <li class="works-items">
             <a href="" class="link">
               <img
                 src="./images/img-cashless-payment.jpg"
@@ -97,7 +97,7 @@
               </p>
             </a>
           </li>
-          <li>
+          <li class="works-items">
             <a href="" class="link">
               <img
                 src="./images/img-meditation.jpg"
@@ -114,7 +114,7 @@
               </p>
             </a>
           </li>
-          <li>
+          <li class="works-items">
             <a href="" class="link">
               <img
                 src="./images/img-taxi.jpg"
@@ -131,7 +131,7 @@
               </p>
             </a>
           </li>
-          <li>
+          <li class="works-items">
             <a href="." class="link">
               <img
                 src="/images/img-screen.jpg"
@@ -148,7 +148,7 @@
               </p>
             </a>
           </li>
-          <li>
+          <li class="works-items">
             <a href="" class="link">
               <img
                 src="./images/img-courses.jpg"
@@ -165,7 +165,7 @@
               </p>
             </a>
           </li>
-          <li>
+          <li class="works-items">
             <a href="" class="link">
               <img
                 src="./images/img-instagram.jpg"
@@ -182,7 +182,7 @@
               </p>
             </a>
           </li>
-          <li>
+          <li class="works-items">
             <a href="" class="link">
               <img
                 src="./images/img-food.jpg"
@@ -199,7 +199,7 @@
               </p>
             </a>
           </li>
-          <li>
+          <li class="works-items">
             <a href=" class="link"" class="link">
               <img
                 src="./images/img-coffee.jpg"
