--- a/index.html
+++ b/index.html
@@ -13,6 +13,16 @@
     />
     <link rel="stylesheet" href="./css/style.css" />
   </head>
+  <footer class="footer">
+    <a href="./index.html" class="logo link"
+      ><span class="logo-part">Web</span>Studio</a
+    >
+    <p class="footer-text">
+      Increase the flow of customers and <br />
+      for your business with digital <br />
+      marketing & growth solutions.
+    </p>
+  </footer>
 
   <body>
     <!-- Header -->
@@ -57,7 +67,7 @@
 
       <!-- Advantages section-->
       <section class="advantages">
-        <h2 class="visually-hidden">Advantages</h2>
+        <h2 class="advantages-rank visually-hidden">Advantages</h2>
         <ul>
           <li>
             <h3 class="advantages-title">Strategy</h3>
@@ -125,7 +135,7 @@
       <section class="team">
         <h2 class="team-title">Our Team</h2>
         <ul class="team-list list">
-          <li>
+          <li class="team-photo">
             <img
               src="./images/mark_guerrero.jpg"
               alt="Mark Guerrero"
@@ -135,7 +145,7 @@
             <h3 class="team-name">Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
-          <li>
+          <li class="team-photo">
             <img
               src="./images/tom_ford.jpg"
               alt="Tom Ford"
@@ -145,7 +155,7 @@
             <h3 class="team-name">Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
-          <li>
+          <li class="team-photo">
             <img
               src="./images/camila_garcia.jpg"
               alt="Camila Garcia"
@@ -155,7 +165,7 @@
             <h3 class="team-name">Camila Garcia</h3>
             <p>Marketing</p>
           </li>
-          <li>
+          <li class="team-photo">
             <img
               src="./images/daniel_wilson.jpg"
               alt="Daniel Wilson"
