--- a/index.html
+++ b/index.html
@@ -13,16 +13,6 @@
     />
     <link rel="stylesheet" href="./css/style.css" />
   </head>
-  <footer class="footer">
-    <a href="./index.html" class="logo link"
-      ><span class="logo-part">Web</span>Studio</a
-    >
-    <p class="footer-text">
-      Increase the flow of customers and <br />
-      for your business with digital <br />
-      marketing & growth solutions.
-    </p>
-  </footer>
 
   <body>
     <!-- Header -->
@@ -184,8 +174,7 @@
         ><span class="logo-part">Web</span>Studio</a
       >
       <p class="footer-text">
-        Increase the flow of customers and <br />
-        for your business with digital <br />
+        Increase the flow of customers and for your business with digital
         marketing & growth solutions.
       </p>
     </footer>
