--- a/portfolio.html
+++ b/portfolio.html
@@ -53,12 +53,28 @@
       <section class="portfolio">
         <ul class="portfolio-filter list">
           <!-- фон и цвет текста в состояние фокуса и хофера -->
-          <li><button type="button" class="button button-portfolio">All</button></li>
+          <li>
+            <button type="button" class="button button-portfolio">All</button>
+          </li>
           <!-- фон и цвет текста в дефолтном состояние -->
-          <li><button type="button" class="button button-portfolio">Web Site</button></li>
-          <li><button type="button" class="button button-portfolio">App</button></li>
-          <li><button type="button" class="button button-portfolio">Design</button></li>
-          <li><button type="button" class="button button-portfolio">Marketing</button></li>
+          <li>
+            <button type="button" class="button button-portfolio">
+              Web Site
+            </button>
+          </li>
+          <li>
+            <button type="button" class="button button-portfolio">App</button>
+          </li>
+          <li>
+            <button type="button" class="button button-portfolio">
+              Design
+            </button>
+          </li>
+          <li>
+            <button type="button" class="button button-portfolio">
+              Marketing
+            </button>
+          </li>
         </ul>
 
         <h1 class="works-rank visually-hidden">Works</h1>
@@ -89,7 +105,7 @@
                 height="300"
               />
               <h2 class="works-items">Cashless Payment</h2>
-              <p class="works-sphere">Marketing</p> 
+              <p class="works-sphere">Marketing</p>
               <p class="works-text">
                 14 Stylish and User-Friendly App Design Concepts · Task Manager
                 App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
@@ -191,7 +207,7 @@
                 height="300"
               />
               <h2 class="works-items">Organic Food</h2>
-              <p> class="works-sphere"Web Site</p>
+              <p class="works-sphere">Web Site</p>
               <p class="works-text">
                 14 Stylish and User-Friendly App Design Concepts · Task Manager
                 App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
@@ -200,7 +216,7 @@
             </a>
           </li>
           <li class="works-items">
-            <a href=" class="link"" class="link">
+            <a href="" class="link">
               <img
                 src="./images/img-coffee.jpg"
                 alt="coffee"
@@ -225,12 +241,9 @@
         ><span class="logo-part">Web</span>Studio</a
       >
       <p class="footer-text">
-        Increase the flow of customers and <br />
-        for your business with digital <br />
+        Increase the flow of customers and for your business with digital
         marketing & growth solutions.
       </p>
     </footer>
   </body>
 </html>
-
-
