--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
         >
 
         <ul class="header-list list">
-          <li><a href="./index.html" class="header-link link">Studio</a></li>
+          <li>
+            <a href="./index.html" class="header-link link current">Studio</a>
+          </li>
           <li>
             <a href="./portfolio.html" class="header-link link">Portfolio</a>
           </li>
@@ -49,7 +51,7 @@
     </header>
 
     <main>
-      <!-- Hero secrion -->
+      <!-- Hero section -->
       <section class="hero">
         <h1 class="hero-title">Effective Solutions for Your Business</h1>
         <button type="button" class="button button-hero">Order Service</button>
