--- a/portfolio.html
+++ b/portfolio.html
@@ -26,7 +26,9 @@
         <ul class="header-list list">
           <li><a href="./index.html" class="header-link link">Studio</a></li>
           <li>
-            <a href="./portfolio.html" class="header-link link">Portfolio</a>
+            <a href="./portfolio.html" class="header-link link current"
+              >Portfolio</a
+            >
           </li>
           <li><a href="#" class="header-link link">Contacts</a></li>
         </ul>
@@ -49,14 +51,12 @@
     </header>
 
     <main>
-      <!-- PORTFOLIO -->
+      <!-- PORTFOLIO SECTION -->
       <section class="portfolio">
         <ul class="portfolio-filter list">
-          <!-- фон и цвет текста в состояние фокуса и хофера -->
           <li>
             <button type="button" class="button button-portfolio">All</button>
           </li>
-          <!-- фон и цвет текста в дефолтном состояние -->
           <li>
             <button type="button" class="button button-portfolio">
               Web Site
