--- a/portfolio.html
+++ b/portfolio.html
@@ -148,7 +148,7 @@
             </a>
           </li>
           <li class="works-items">
-            <a href="." class="link">
+            <a href="" class="link">
               <img
                 src="/images/img-screen.jpg"
                 alt="screen illustrations"
