--- a/portfolio.html
+++ b/portfolio.html
@@ -150,7 +150,7 @@
           <li class="works-items">
             <a href="" class="link">
               <img
-                src="/images/img-screen.jpg"
+                src="./images/img-screen.jpg"
                 alt="screen illustrations"
                 width="360"
                 height="300"
