my commit after Mentor

--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
 
       <!-- Advantages section-->
       <section class="advantages">
-        <h2 class="advantages-rank visually-hidden">Advantages</h2>
-        <ul>
+        <h2 class="visually-hidden">Advantages</h2>
+        <ul class="advantages-items list">
           <li>
             <h3 class="advantages-title">Strategy</h3>
             <p class="advantages-description">
