--- a/portfolio.html
+++ b/portfolio.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;600;700;&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/style.css" />
@@ -53,6 +53,7 @@
     <main>
       <!-- PORTFOLIO SECTION -->
       <section class="portfolio">
+        <h1 class="visually-hidden">Works</h1>
         <ul class="portfolio-filter list">
           <li>
             <button type="button" class="button button-portfolio">All</button>
@@ -77,7 +78,6 @@
           </li>
         </ul>
 
-        <h1 class="works-rank visually-hidden">Works</h1>
         <ul class="works-list list">
           <li class="works-items">
             <a href="" class="link">
@@ -89,11 +89,6 @@
               />
               <h2 class="works-items">Banking App Interface Concept</h2>
               <p class="works-sphere">App</p>
-              <p class="works-text">
-                14 Stylish and User-Friendly App Design Concepts · Task Manager
-                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
-                Storage App
-              </p>
             </a>
           </li>
           <li class="works-items">
@@ -106,11 +101,6 @@
               />
               <h2 class="works-items">Cashless Payment</h2>
               <p class="works-sphere">Marketing</p>
-              <p class="works-text">
-                14 Stylish and User-Friendly App Design Concepts · Task Manager
-                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
-                Storage App
-              </p>
             </a>
           </li>
           <li class="works-items">
@@ -123,11 +113,6 @@
               />
               <h2 class="works-items">Meditaion App</h2>
               <p class="works-sphere">App</p>
-              <p class="works-text">
-                14 Stylish and User-Friendly App Design Concepts · Task Manager
-                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
-                Storage App
-              </p>
             </a>
           </li>
           <li class="works-items">
@@ -140,11 +125,6 @@
               />
               <h2 class="works-items">Taxi Service</h2>
               <p class="works-sphere">Marketing</p>
-              <p class="works-text">
-                14 Stylish and User-Friendly App Design Concepts · Task Manager
-                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
-                Storage App
-              </p>
             </a>
           </li>
           <li class="works-items">
@@ -157,11 +137,6 @@
               />
               <h2 class="works-items">Screen Illustrations</h2>
               <p class="works-sphere">Design</p>
-              <p class="works-text">
-                14 Stylish and User-Friendly App Design Concepts · Task Manager
-                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
-                Storage App
-              </p>
             </a>
           </li>
           <li class="works-items">
@@ -174,11 +149,6 @@
               />
               <h2 class="works-items">Online Courses</h2>
               <p class="works-sphere">Marketing</p>
-              <p class="works-text">
-                14 Stylish and User-Friendly App Design Concepts · Task Manager
-                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
-                Storage App
-              </p>
             </a>
           </li>
           <li class="works-items">
@@ -191,11 +161,6 @@
               />
               <h2 class="works-items">Instagram Stories Concept</h2>
               <p class="works-sphere">Design</p>
-              <p class="works-text">
-                14 Stylish and User-Friendly App Design Concepts · Task Manager
-                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
-                Storage App
-              </p>
             </a>
           </li>
           <li class="works-items">
@@ -208,11 +173,6 @@
               />
               <h2 class="works-items">Organic Food</h2>
               <p class="works-sphere">Web Site</p>
-              <p class="works-text">
-                14 Stylish and User-Friendly App Design Concepts · Task Manager
-                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
-                Storage App
-              </p>
             </a>
           </li>
           <li class="works-items">
@@ -225,11 +185,6 @@
               />
               <h2 class="works-items">Fresh Coffee</h2>
               <p class="works-sphere">Web Site</p>
-              <p class="works-text">
-                14 Stylish and User-Friendly App Design Concepts · Task Manager
-                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
-                Storage App
-              </p>
             </a>
           </li>
         </ul>
